stp-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stp-service
  namespace: default
  labels:
    app: stp-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: stp-app
